# SDL-tictactoe

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: game  game.cpp
